--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "empty-element": "^1.0.0",
     "express": "^4.15.4",
     "intl": "^1.2.5",
+    "intl-messageformat": "^2.1.0",
     "intl-relativeformat": "^2.0.0",
     "materialize-css": "^0.100.1",
     "page": "^1.7.1",
